2014-08-28  Pratik Solanki  <psolanki@apple.com>

        WebContent hangs under SharedBuffer::duplicateDataBufferIfNecessary() while browsing some websites
        https://bugs.webkit.org/show_bug.cgi?id=136347
        <rdar://problem/18073745>

        Reviewed by Andreas Kling.

        When passing data to ImageIO, we create a copy if we have to reallocate the buffer. We would
        set the size of the new buffer to be the size of the SharedBuffer data. This causes memory
        churn since we would create a new buffer for every data chunk we get. Fix this by at least
        doubling the capacity of the buffer when we duplicate it.

        * platform/SharedBuffer.cpp:
        (WebCore::SharedBuffer::duplicateDataBufferIfNecessary):

2014-08-28  Dan Bernstein  <mitz@apple.com>

        iOS build fix.

        * WebCore.exp.in: Updated symbol.

2014-08-28  Benjamin Poulain  <bpoulain@apple.com>

        Scrolling with spacebar on a page with fixed header breaks reading flow
        https://bugs.webkit.org/show_bug.cgi?id=135506

        Reviewed by Simon Fraser.

        When scrolling by page, find the height of any bar that is obscuring the top or bottom of the page,
        and substract that height from the step to scroll.

        Tests: scrollbars/scrolling-backward-by-page-accounting-bottom-fixed-elements-on-keyboard-spacebar.html
               scrollbars/scrolling-backward-by-page-on-keyboard-spacebar.html
               scrollbars/scrolling-by-page-accounting-oversized-fixed-elements-on-keyboard-spacebar.html
               scrollbars/scrolling-by-page-accounting-top-fixed-elements-on-keyboard-spacebar.html
               scrollbars/scrolling-by-page-accounting-top-fixed-elements-with-negative-top-on-keyboard-spacebar.html
               scrollbars/scrolling-by-page-ignoring-hidden-fixed-elements-on-keyboard-spacebar.html
               scrollbars/scrolling-by-page-ignoring-transparent-fixed-elements-on-keyboard-spacebar.html